# Trivent

./: CMakeLists.txt
DifGeom/: sdhcal2012.json  sdhcalH2SEPT2017.xml  sdhcalH2SEPT2018.json  sdhcalH2SEPT2018cheat.json  sdhcalOCT2015.json
EventBuilder/: CMakeLists.txt
EventBuilder/include/: FromStreamoutToRoot.h  Mapping.h  TriventProc.h
EventBuilder/src/: FromStreamoutToRoot.cc  Mapping.cc  TriventProc.cc
script/: Trivent.py  streamoutToRootSteerExample.xml  triventOnLocal.py
